Un poco de estilos

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,5 @@
 h1 {
-    color: #754;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#001871;
+    font-family: Roboto;
+
   }
-p {
-    color: #f515;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-strong {
-    color: red;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
