--- a/src/app/clubes/clubes.component.html
+++ b/src/app/clubes/clubes.component.html
@@ -1,15 +1,5 @@
-
-
 <ul class="clubes">
-
-  <li *ngFor="let club of clubes" (click)="onSelect(club)" [class.activo]="club == clubActivo"><span class="idClub">{{club.id}}</span> {{club.nombre}} <span class="golesClubes">({{club.goles}} goles a favor)</span></li>
-
+  <li *ngFor="let club of clubes" (click)="onSelect(club)" [class.activo]="club == clubActivo"><span class="idClub">{{club.id}}</span> {{club.nombre | titlecase}} <span class="golesClubes">({{club.goles}} goles a favor)</span></li>
 </ul>
 
-<div *ngIf="clubActivo; else clubInactivo">
-  <h3>Club activo: <input [(ngModel)]="clubActivo.nombre" placeholder="nombre"></h3>
-
-  </div>
-  <ng-template #clubInactivo>
-    <h3>Haga clic en un club</h3>
-  </ng-template>
+<app-club-detalles [clubActivo]="clubActivo"></app-club-detalles>
