--- a/src/app/club-detalles/club-detalles.component.css
+++ b/src/app/club-detalles/club-detalles.component.css
@@ -6,3 +6,17 @@ label{
   font-family: Roboto;
   color: blue;
 }
+a{
+    color: ghostwhite;
+    text-decoration: none;
+    margin: 3 3 2em 3;
+    padding: 5px;
+
+    cursor: pointer;
+    position: relative;
+
+    background-color: blue;
+
+    border-radius: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
